--- a/config/beans.yml
+++ b/config/beans.yml
@@ -1,20 +1,32 @@
-publicate_redis:
-    class: 'AnyEvent::Redis::RipeRedis'
-    args:
-        host: '127.0.0.1'
-        port: 6379
-        encoding: 'utf8'
-        reconnect: 1
-        connection_timeout: 1
+#publicate_redis:
+#    class: 'AnyEvent::Redis::RipeRedis'
+#    args:
+#        host: '127.0.0.1'
+#        port: 6379
+#        encoding: 'utf8'
+#        reconnect: 1
+#        connection_timeout: 1
+#
+#subscribe_redis:
+#    class: 'AnyEvent::Redis::RipeRedis'
+#    args:
+#        host: '127.0.0.1'
+#        port: 6379
+#        encoding: 'utf8'
+#        reconnect: 1
+#        connection_timeout: 1
 
 subscribe_redis:
-    class: 'AnyEvent::Redis::RipeRedis'
+    class: 'ClubChat::RedisConnection::AnyEventRedis'
+    method: getConnectionSubscribe
     args:
-        host: '127.0.0.1'
-        port: 6379
-        encoding: 'utf8'
-        reconnect: 1
-        connection_timeout: 1
+        - '127.0.0.1'
+
+publicate_redis:
+    class: 'ClubChat::RedisConnection::AnyEventRedis'
+    method: getConnectionPublicate
+    args:
+        - '127.0.0.1'
 
 subscriptions_service:
     class: 'ClubChat::MessagesPupSub::SubscriptionsService'
