--- a/config/beans_test.yml
+++ b/config/beans_test.yml
@@ -1,21 +1,24 @@
-pubsub_redis:
-    class: 'AnyEvent::Redis::RipeRedis'
+subscribe_redis:
+    class: 'ClubChat::RedisConnection::AnyEventRedis'
+    method: getConnection
     args:
-        host: 'localhost'
-        port: 6379
-        encoding: 'utf8'
-        reconnect: 20
-        connection_timeout: 5
+        - '127.0.0.1'
+
+publicate_redis:
+    class: 'ClubChat::RedisConnection::AnyEventRedis'
+    args:
+        address: '127.0.0.1'
 
 subscriptions_service:
     class: 'ClubChat::MessagesPupSub::SubscriptionsService'
     args:
-        redis_handler: {ref: pubsub_redis}
+        redis_subscription_handler: {ref: subscribe_redis}
+        redis_publishing_handler: {ref: publicate_redis}
         channel: 'club_chat_ps'
 authentication_service:
     class: 'ClubChat::Authentication::AuthenticationServiceDummy'
 messages_handler:
     class: 'ClubChat::MessagesHandler'
     args:
-        authentication_service: {ref:authentication_service}
-        message_registrator: {ref:message_registrator}
+        authentication_service: {ref: authentication_service}
+        message_registrator: {ref: subscriptions_service}
