--- a/config/beans_test.yml
+++ b/config/beans_test.yml
@@ -1,13 +1,14 @@
 subscribe_redis:
     class: 'ClubChat::RedisConnection::AnyEventRedis'
-    method: getConnection
+    method: getConnectionSubscribe
     args:
         - '127.0.0.1'
 
 publicate_redis:
     class: 'ClubChat::RedisConnection::AnyEventRedis'
+    method: getConnectionPublicate
     args:
-        address: '127.0.0.1'
+        - '127.0.0.1'
 
 subscriptions_service:
     class: 'ClubChat::MessagesPupSub::SubscriptionsService'
@@ -22,3 +23,5 @@ messages_handler:
     args:
         authentication_service: {ref: authentication_service}
         message_registrator: {ref: subscriptions_service}
+
+    
